# Claude-code-Session-Automation

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LAUNCHD_SETUP.md  LICENSE  Makefile  README.md  claude-code-automation.rb  com.claude-code-automation.plist  manual_test.py  package.json  pyproject.toml  requirements.txt  setup-launchagent.py  test_cli.py
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  INSTALLATION.md  USAGE.md
homebrew-formula/: claude-code-automation.rb
scripts/: auto-setup-hooks.py  setup-git-hooks.sh
src/: config.py  launchagent.py  session.py  simple_cli.py
src/claude_code_automation/: __init__.py  cli.py  launchagent.py  logger.py  new_cli.py  scheduler.py  session.py  simple_cli.py  wrapper.sh
test/: debug_cli.py  debug_commands.py  manual_test.py  test_cli.py  test_integration.py.skip  test_launchagent.py.skip  test_local_integration.py  test_mock_core.py  test_session.py.skip
